# email-eval-assistant

./: .gitignore  AI Engineer Candidate Assessment_ Email Generation Assistant.txt  CHECKLIST.md  QUICKSTART.md  README.md  SUMMARY.md  UI_ADDITIONS.md  app.py  comparative_analysis.md  config.py  generate_report.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_eval.py  utils.py
data/: scenarios.json
evaluation/: judge.py  metrics.py
generation/: gemini_client.py  openai_client.py
prompts/: email_prompt.py  system_prompt.txt
static/: app.js  index.html  style.css
tests/: test_metrics.py
