[project]
name = "email-eval-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.8.0",
    "openai>=2.43.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.1",
    "textstat>=0.7.4",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
]
